--- a/project/application_context.html
+++ b/project/application_context.html
@@ -63,9 +63,39 @@
 	</p>
 
 
+	<h3>Entrvista B - Gabriel Ikoma</h3>
+	  
+        </p>
+
+	  <h5>Entrevista com Gabriel Ikoma, Meu amigo de infância.</h5>
+	  
+		<br><br><b>Anthony:</b>
+                O que você acha do projeto que acabei de lhe apresentar?
+
+	        <br><br><b>Gabriel:</b>
+                O projeto é bem interessante, podemos dizer que se vocês conseguirem será revolucionário, porque pra fazer alguma coisa melhor que uma empresa bilhonária tem que ser bom mesmo.
+
+	        <br><br><b>Anthony:</b>
+                Você acha que este projeto é útil?
+
+	        <br><br><b>Gabriel:</b>
+                Gabriel: Pra ser honesto ele é semelhante a um identificardor de faces, tipo aquelas cameras de segurança dos EUA, eu acho que vai ser útil não só pro propósito que vocês estão pensando e se ficar realmente bom vocês podem até ganhar dinheiro com isso kkkkk
+
+	        <br><br><b>Anthony:</b>
+                kkkk Se esse for o caso você já é sócio kkkkk. Mas isso encerra nossa entrevista, muito obrigado Gabriel.
+
+	        <br><br><b>Gabriel:</b>
+                O prazer foi meu, espero q vocês consigam.
+
+	        <br><br><b>Anthony:</b>
+                Obrigado.
+	  
+
+Fim da entrevista.
+
 	<h2>Contexto</h2>
 
-		<p>Após as entrevistas decimos que o Tema do trabalho será: <br>
+		<p>Após as entrevistas decidimos que o Tema do trabalho será: <br>
 			<b>Criação de um sistema de identificação de cartas de Magic: The Gathering</b>
 		</p>
 		<p>
@@ -73,29 +103,31 @@
 		O objetivo do jogo é derrotar o oponente reduzindo sua vida a zero ou por meio de condições de 
 		vitória específicas. Nele, cada jogador constrói seu próprio baralho antes do jogo, escolhendo 
 		entre milhares de cartas disponíveis, que representam criaturas, feitiços, terrenos e outros 
-		elementos do jogo. 
+		tipos de cartas existentes no jogo. 
 		</p>
 
 		<p>
 			Além da forma física, o Magic: The Gathering também possui uma forma de jogo online chamada 
-			"Magic Online". Nessa versão, os jogadores podem montar seus decks virtuais e jogar contra 
-			oponentes de todo o mundo através da internet. O Magic Online oferece uma experiência de 
-			jogo semelhante à versão física, com atualizações regulares de cartas e torneios online.
+			"Magic Arena" e uma forma online de jogar com as cartas físicas através de um site da própria Wizards of the Coast chamada de "Spelltable". 
+			Nessa versão, os jogadores usam seus decks físicos para jogar contra 
+			oponentes de todo o mundo através da internet. O "Spelltable" oferece uma experiência de 
+			jogo que visa se aproximar à versão física, fazendo com que os jogadores tenham diversos formatos para serem jogados.
 		</p>
 
 		<p>
-			Para a identificação das cartas no jogo online, 
-			os jogadores precisam gravar seus tabuleiros de jogo em vídeo, fornecendo uma prova visual das 
+			Para a identificação das cartas no "Spelltable"
+			os jogadores utilizam um sistema de stream que envia imagens de seus tabuleiros em tempo real para o site onde os outros jogadores podem ver 
+			todas as cartas em suas respectivas mesas tornando possível a simulação do jogo físico, fornecendo uma prova visual das 
 			ações tomadas durante a partida. Essa medida é adotada para garantir a integridade do jogo e 
-			evitar trapaças.
+			evitar trapaças, além de aumentar a imersão no jogo.
 		</p>
 
 		<p>
-			Embora o uso de câmeras para identificar as cartas no Magic Online seja uma solução prática, 
-			como em qualquer tecnologia, pode haver problemas ocasionais de reconhecimento. 
-			A dependência de software para identificar as cartas pode levar a situações em que o 
-			programa não consegue reconhecê-las corretamente. Isso pode ser frustrante para os jogadores, 
-			pois pode resultar em erros de jogabilidade e em partidas desequilibradas.
+			Embora o uso de câmeras para identificar as cartas no "Spelltable" seja uma solução prática, 
+			como em qualquer programa, pode haver problemas ocasionais e bugs. 
+			O bug mais preocupante é o que impede o sistema de ler quais cartas estão na mesa, pois geralmente a qualidade da imagem nem sempre
+			é das melhores então o recurso de scanear a carta facilita a vida dos jogadores. Isso pode ser frustrante para os jogadores, 
+			pois pode resultar em jogadas erradas por falta de conhecimento das cartas em campo.
 		</p>
 
 
