--- a/project/application_context.html
+++ b/project/application_context.html
@@ -60,6 +60,8 @@
 		acho que todo o resto é viável. Gostei da sua ideia, vou levar para o meu grupo e vamos avaliar.
 		Muito obrigado pela entrevista!
 
+		<img src='spelltable.jpg' />
+
 	</p>
 
 
@@ -130,12 +132,16 @@ Fim da entrevista.
 			pois pode resultar em jogadas erradas por falta de conhecimento das cartas em campo.
 		</p>
 
+	  	
+
 
 	<h2>Objetivo</h2>
 	<p>
 		Dessa forma, o trabalho tem como objetivo desenvolver um programa que consiga reconhecer 
 		as cartas utilizadas nas partidas online, de forma efetiva e satisfatória, utilizando 
 		os conceitos vistos na disciplina de Processamento de Vídeo.
+
+		<img src='card_recognition.jpg' />
 	</p>
 
 	 <h2>Requisitos</h2>
