--- a/project/application_context.html
+++ b/project/application_context.html
@@ -60,7 +60,7 @@
 		acho que todo o resto é viável. Gostei da sua ideia, vou levar para o meu grupo e vamos avaliar.
 		Muito obrigado pela entrevista!
 
-		<img src='spelltable.jpg' />
+		<img src='spelltable.jpg' height='480'/>
 
 	</p>
 
@@ -141,7 +141,7 @@ Fim da entrevista.
 		as cartas utilizadas nas partidas online, de forma efetiva e satisfatória, utilizando 
 		os conceitos vistos na disciplina de Processamento de Vídeo.
 
-		<img src='card_recognition.jpg' />
+		<img src='card_recognition.jpg' height='480'/>
 	</p>
 
 	 <h2>Requisitos</h2>
