--- a/project/application_context.html
+++ b/project/application_context.html
@@ -141,7 +141,7 @@ Fim da entrevista.
 		as cartas utilizadas nas partidas online, de forma efetiva e satisfatória, utilizando 
 		os conceitos vistos na disciplina de Processamento de Vídeo.
 
-		<img src='card_recognition.jpg' height='480'/>
+		<br><img src='card_recognition.jpg' height='480'/>
 	</p>
 
 	 <h2>Requisitos</h2>
