Added line breaks

--- a/project/plan/plan.html
+++ b/project/plan/plan.html
@@ -19,7 +19,8 @@
 		O Diagrama abaixo mostra todos os estágios etapas previstas para a identificação de uma carta de magic
 		na camêra e a exibição de seu scan correspondente na tela.
 		<br> Os estágios podem ser divididos em 3 subsistemas: <b>Entrada/Saída</b>, <b>Separação da Carta</b>,
-		<b>Identificação da Carta</b>. Na seção Arquitetura de Subsistemas eles serão explicados com mais detalhes.
+		<b>Identificação da Carta</b>. 
+		<br>Na seção Arquitetura de Subsistemas eles serão explicados com mais detalhes. <br>
 
 		<br><img src='Spellboar.drawio.png' height='480'/>
 
