Fixed part 4 subtitles

--- a/reports/report4/report4.html
+++ b/reports/report4/report4.html
@@ -489,7 +489,7 @@ cv2.imwrite("final.png", final_image)
 			
 			<figure>
 				<img src="media/4/fernando_s/final.png" height="480"/>
-				<figcaption>Image Original vs Imagem Equalizada</figcaption>
+				<figcaption>Imagem Original vs Imagem Equalizada</figcaption>
 			</figure>
 		
 		<h4>Leonardo<h4>
@@ -506,7 +506,7 @@ cv2.imwrite("final.png", final_image)
 			
 			<figure>
 				<img src="media/4/leonardo/final.png" height="480"/>
-				<figcaption>Image Original vs Imagem Equalizada</figcaption>
+				<figcaption>Imagem Original vs Imagem Equalizada</figcaption>
 			</figure>
 
 		<h4>Carta de Magic</h4>
@@ -523,7 +523,7 @@ cv2.imwrite("final.png", final_image)
 			
 			<figure>
 				<img src="media/4/magic/final.png" height="480"/>
-				<figcaption>Image Original vs Imagem Equalizada</figcaption>
+				<figcaption>Imagem Original vs Imagem Equalizada</figcaption>
 			</figure>
 
 
