--- a/reports/report4/report4.html
+++ b/reports/report4/report4.html
@@ -370,6 +370,33 @@ cv2.imwrite("final.png", final_image)
 				<figcaption>Histograma Após Equalização</figcaption>
 			</figure>
 		
+		<h4>Fernando A.</h4>
+
+			<figure>
+				<img src="media/1/fernando_a/fernando_a.jpg" height="480"/>
+				<figcaption>Original</figcaption>
+			</figure>
+
+			<figure>
+				<img src="media/1/fernando_a/imagem_cinza.jpg" height="480"/>
+				<figcaption>Escala de cinza</figcaption>
+			</figure>
+
+			<figure>
+				<img src="media/1/fernando_a/imagem_equalizada.jpg" height="480"/>
+				<figcaption>Escala de cinza Equalizada</figcaption>
+			</figure>
+
+			<figure>
+				<img src="media/1/fernando_a/antes.png" height="480"/>
+				<figcaption>Histograma Antes da Equalização</figcaption>
+			</figure>
+
+			<figure>
+				<img src="media/1/fernando_a/depois.png" height="480"/>
+				<figcaption>Histograma Após Equalização</figcaption>
+			</figure>
+		
 		<h4>Carta de Magic</h4>
 
 			<figure>
@@ -420,6 +447,29 @@ cv2.imwrite("final.png", final_image)
 				<figcaption>Histograma Após Equalização</figcaption>
 			</figure>
 
+		<h4>Fernando A.</h4>
+
+			<figure>
+				<img src="media/2/fernando_a/imagem_cinza.jpg" height="480"/>
+				<figcaption>Escala de cinza</figcaption>
+			</figure>
+
+			<figure>
+				<img src="media/2/fernando_a/imagem_equalizada.jpg" height="480"/>
+				<figcaption>Escala de cinza Equalizada</figcaption>
+			</figure>
+
+			<figure>
+				<img src="media/2/fernando_a/histograma_before.png" height="480"/>
+				<figcaption>Histograma Antes da Equalização</figcaption>
+			</figure>
+
+			<figure>
+				<img src="media/2/fernando_a/histograma_after.png" height="480"/>
+				<figcaption>Histograma Após Equalização</figcaption>
+			</figure>
+
+
 		<h3> 3 - Binarização de imagem </h3>
 
 		<h4>Fernando S.</h4>
@@ -455,7 +505,24 @@ cv2.imwrite("final.png", final_image)
 				<img src="media/3/leonardo/imagem_limiarizada.jpg" height="480"/>
 				<figcaption>Imagem binarizada</figcaption>
 			</figure>
-		
+
+		<h4>Fernando A.</h4>
+
+			<figure>
+				<img src="media/3/fernando_a/fernando_a.jpg" height="480"/>
+				<figcaption>Original</figcaption>
+			</figure>
+			
+			<figure>
+				<img src="media/3/fernando_a/imagem_cinza.jpg" height="480"/>
+				<figcaption>Imagem cinza</figcaption>
+			</figure>
+			
+			<figure>
+				<img src="media/3/fernando_a/imagem_limiarizada.jpg" height="480"/>
+				<figcaption>Imagem binarizada</figcaption>
+			</figure>
+
 		<h4>Carta de Magic</h4>
 
 			<figure>
@@ -507,6 +574,23 @@ cv2.imwrite("final.png", final_image)
 			<figure>
 				<img src="media/4/leonardo/final.png" height="480"/>
 				<figcaption>Imagem Original vs Imagem Equalizada</figcaption>
+			</figure>
+			
+		<h4>Fernando S.</h4>
+
+			<figure>
+				<img src="media/4/fernando_a/raw_histogram.png" height="480"/>
+				<figcaption>Histograma Antes da Equalização</figcaption>
+			</figure>
+			
+			<figure>
+				<img src="media/4/fernando_a/equalized_histogram.png" height="480"/>
+				<figcaption>Histograma Equalizado </figcaption>
+			</figure>
+			
+			<figure>
+				<img src="media/4/fernando_a/final.png" height="480"/>
+				<figcaption>Image Original vs Imagem Equalizada</figcaption>
 			</figure>
 
 		<h4>Carta de Magic</h4>
