--- a/reports/report4/report4.html
+++ b/reports/report4/report4.html
@@ -20,8 +20,21 @@
 		
 		<h2> 1.Introdução </h2>
 
+		<h3>Neste programa utilizaremos filtros em imagens a fim de estudar mais a fundo como funciona
+		    o histograma e a importância dele para o melhor entendermos como se compõe uma imagem e
+	            diversas maneiras de analizarmos a mesma, podendo assim alterar sua visualização conforme
+		    desejado.</h3>
+
 
 		<h2> 2.Fundamentos Básicos</h2>
+
+		<h3>Hstograma: um histograma pode ser definido como um gráfico que geralmente classcifica dados 
+		em grupos de intervalos, mas no estudo de imagem histograma visa prover informações como
+		contraste, luminosidade, etc.</h3>
+
+		<h3></h3>
+
+		<h3>
 
 		<h2> 3.Materiais e Métodos</h2>
 
