--- a/reports/report4/report4.html
+++ b/reports/report4/report4.html
@@ -32,6 +32,14 @@
 		em grupos de intervalos, mas no estudo de imagem histograma visa prover informações como
 		contraste, luminosidade, etc.</h3>
 
+		<h3>Equalização de histograma: a equalização serve para deixar a imagem mais homogênia e com melhor 
+		contraste, como em imagens com baixo contraste e alta concentração de intensidade em um pequeno espaço
+		o que fazemos é melhor distribuir a intensidade por um histograma maior em ambas estremidades.</h3>
+
+		
+
+		
+
 		<h3></h3>
 
 		<h3>
