--- a/reports/report4/report4.html
+++ b/reports/report4/report4.html
@@ -59,13 +59,11 @@
 
 		<p>a) Programas:</p>
 		<p>- Python: Linguagem de programação utilizada para desenvolver os programas.</p>
-		<p>- CapCut: Software de edição de vídeo utilizado para fazer a união de todos os vídeos em um só com suas respectivas legendas.</p>
-		<p>- HandBrake: Software de compressão de vídeo utilizado para diminuir o tamanho do arquivo de vídeo para o tamanho suportado pelo GitHub. </p>
-
+		
 		<p>b) Bibliotecas:</p>
 		<p>- OpenCV (versão 4.7.0): Biblioteca principal para manipulação de imagens e vídeos.</p>
 		<p>- NumPy (versão 1.21.5): Biblioteca para operações numéricas e processamento de arrays.</p>
-		<p>- Time: Biblioteca para aumentar o tempo para tirar as fotos.</p>
+		<p>- Matplotlib (versão 3.7.2): Biblioteca para plotagem de gráficos.</p>
 
 		<h3>3. Código Fonte</h3>
 
