--- a/reports/report4/report4.html
+++ b/reports/report4/report4.html
@@ -632,11 +632,12 @@ cv2.imwrite("final.png", final_image)
 
 		<h2> 5. Conclusões e Comentários Finais</h2>
 
-		<p>Este laboratório de Processamento de Vídeo proporcionou uma oportunidade de aprofundar o conhecimento teórico e prático sobre a conversão de cores, aplicação de filtros e técnicas de processamento 
-		de imagem e vídeo. Através da utilização de materiais como o computador, a biblioteca OpenCV e a webcam, foi possível desenvolver e executar experimentos práticos, obtendo resultados 
-		satisfatórios. O estudo teórico e a aplicação prática dos conceitos permitiram compreender a importância das conversões de cores, rastreamento de objetos e aplicação de filtros para melhorar 
-		a qualidade visual das imagens resultantes. O laboratório contribuiu para a formação de uma base sólida no processamento de vídeo, capacitando os participantes a aplicar esses conhecimentos 
-		em uma variedade de contextos práticos.</p>
+		<p>Este Este laboratório de Processamento de Vídeo proporcionou uma oportunidade de aprofundar o conhecimento teórico e prático sobre a equalização de histograma e 
+			binarização de imagem usando a linguagem python com as seguintes bibliotecas : OpenCV, NumPy e Matplotlib, com isso foram realizados 
+			experimentos e os resultados obtidos foram satisfatórios e serviu para compreender a importância das técnicas utilizadas para melhorar a
+			qualidade visual das imagens, já que o histograma é utilizado para fornecer as informações de  contraste,luminosidade e distribuição de 
+			intensidadades de uma imagem e a sua equalização é responsável por melhor o constrate e a homogeneidade da imagem,redistribuindo as intensidades em um intervalo maior, 
+			útil para imagens com baixo constrate e alta concentração de intensidades em um pequeno intervalo..</p>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 	<script>
