--- a/reports/report4/report4.html
+++ b/reports/report4/report4.html
@@ -20,21 +20,21 @@
 		
 		<h2> 1.Introdução </h2>
 
-		<h3>Neste programa utilizaremos filtros em imagens a fim de estudar mais a fundo como funciona
+		<p>Neste programa utilizaremos filtros em imagens a fim de estudar mais a fundo como funciona
 		    o histograma e a importância dele para o melhor entendermos como se compõe uma imagem e
 	            diversas maneiras de analizarmos a mesma, podendo assim alterar sua visualização conforme
-		    desejado.</h3>
+		    desejado.</p>
 
 
 		<h2> 2.Fundamentos Básicos</h2>
 
-		<h3>Hstograma: um histograma pode ser definido como um gráfico que geralmente classcifica dados 
+		<p>Hstograma: um histograma pode ser definido como um gráfico que geralmente classcifica dados 
 		em grupos de intervalos, mas no estudo de imagem histograma visa prover informações como
-		contraste, luminosidade, etc.</h3>
+		contraste, luminosidade, etc.</p>
 
-		<h3>Equalização de histograma: a equalização serve para deixar a imagem mais homogênia e com melhor 
+		<p>Equalização de histograma: a equalização serve para deixar a imagem mais homogênia e com melhor 
 		contraste, como em imagens com baixo contraste e alta concentração de intensidade em um pequeno espaço
-		o que fazemos é melhor distribuir a intensidade por um histograma maior em ambas estremidades.</h3>
+		o que fazemos é melhor distribuir a intensidade por um histograma maior em ambas estremidades.</p>
 
 		
 
