--- a/reports/report4/report4.html
+++ b/reports/report4/report4.html
@@ -28,11 +28,11 @@
 
 		<h2> 2.Fundamentos Básicos</h2>
 
-		<p><strong>Hstograma</strong>: um histograma pode ser definido como um gráfico que geralmente classcifica dados 
+		<p><strong>Hstograma</strong>: Um histograma pode ser definido como um gráfico que geralmente classcifica dados 
 		em grupos de intervalos, mas no estudo de imagem histograma visa prover informações como
 		contraste, luminosidade, etc.</p>
 
-		<p><strong>Equalização de histograma</strong>: a equalização serve para deixar a imagem mais homogênia e com melhor 
+		<p><strong>Equalização de histograma</strong>: A equalização serve para deixar a imagem mais homogênia e com melhor 
 		contraste, como em imagens com baixo contraste e alta concentração de intensidade em um pequeno espaço
 		o que fazemos é melhor distribuir a intensidade por um histograma maior em ambas estremidades.</p>
 
